[gd_scene load_steps=7 format=3 uid="uid://cmriwaexowk04"]

[ext_resource type="Script" path="res://Scripts/Others/WinMenuScript.gd" id="1_4rrjo"]

[sub_resource type="FontFile" id="FontFile_yn2gq"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_m126j"]
line_spacing = 5.0
font = SubResource("FontFile_yn2gq")
font_size = 80
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="FontFile_k8hcn"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_w5p3x"]
font = SubResource("FontFile_k8hcn")

[sub_resource type="FontFile" id="FontFile_27hev"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/55/0/ascent = 0.0
cache/0/55/0/descent = 0.0
cache/0/55/0/underline_position = 0.0
cache/0/55/0/underline_thickness = 0.0
cache/0/55/0/scale = 1.0

[node name="WinMenu" type="CanvasLayer"]
script = ExtResource("1_4rrjo")

[node name="PanelContainer2" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer2"]
custom_minimum_size = Vector2(700, 600)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer2/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="WinLabel" type="Label" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "YOU WON
"
label_settings = SubResource("LabelSettings_m126j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="TimeTakenLabel" type="Label" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "TIME TAKEN: ..."
label_settings = SubResource("LabelSettings_w5p3x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="DistanceTravelledLabel" type="Label" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "DISTANCE TRAVELLED: ..."
label_settings = SubResource("LabelSettings_w5p3x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="DamageDealtLabel" type="Label" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "DAMAGE DEALT: ..."
label_settings = SubResource("LabelSettings_w5p3x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="ExitButton" type="Button" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_27hev")
theme_override_font_sizes/font_size = 55
text = "EXIT
"

[connection signal="pressed" from="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
